--- a/SistemaEscola/src/views/ProfessorJInternalFrame.form
+++ b/SistemaEscola/src/views/ProfessorJInternalFrame.form
@@ -160,7 +160,6 @@
                       <Component id="RG" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="rgJTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -257,7 +256,7 @@
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="/*"/>
-            <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="*/&#xa;&#xa;disciplinaPesquisaJToggleButton.addActionListener(professorController);&#xa;disciplinaPesquisaJToggleButton.setActionCommand(&quot;pesquisarProfessor&quot;);"/>
+            <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="*/&#xa;&#xa;disciplinaPesquisaJToggleButton.addActionListener(professorController);&#xa;disciplinaPesquisaJToggleButton.setActionCommand(&quot;disciplinaPesquisaJToggleButton&quot;);"/>
           </AuxValues>
         </Component>
       </SubComponents>
@@ -516,7 +515,7 @@
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="/*"/>
-        <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="*/&#xa;salvarJButton.addActionListener(professorController);&#xa;salvarJButton.setActionCommand(&quot;salvarProfessor&quot;);"/>
+        <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="*/&#xa;salvarJButton.addActionListener(professorController);&#xa;salvarJButton.setActionCommand(&quot;salvarJButton&quot;);"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JToggleButton" name="cancelarJToggleButton">
@@ -528,7 +527,7 @@
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="/*"/>
-        <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="*/&#xa;cancelarJToggleButton.addActionListener(professorController);&#xa;cancelarJToggleButton.setActionCommand(&quot;cancelar&quot;);"/>
+        <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="*/&#xa;cancelarJToggleButton.addActionListener(professorController);&#xa;cancelarJToggleButton.setActionCommand(&quot;cancelarJToggleButton&quot;);"/>
       </AuxValues>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel4">
